tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__Wiremillv02Alpha-AAAAAAAAAAAAAAAAAAAB7Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 493,
  "prerequisites": [
    48
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Small gears require a wire cutter to be made, so let's craft one.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 1,
    "name": "§3§lWiremill v0.2 Alpha",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    48
  ],
  "rewards": [],
  "tasks": []
}
