tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__YourMomSaystoUpg-AAAAAAAAAAAAAAAAAAAHxA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1988,
  "prerequisites": [
    1987
  ],
  "properties": {
    "auto_claim": false,
    "desc": "There are many tiers of upgrades for storage drawers. Make some iron and gold tier upgrades and I'll give you some of the special purpose upgrades to experiment with in your base. Check NEI for more options such as Obsidian, Emerald, and Diamond upgrades.\n\n[warn]To remove upgrades, shift-right-click with an empty hand to access the drawer interface.[/warn]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lYour Mom Says to Upgrade Your Drawers",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1987
  ],
  "rewards": [],
  "tasks": []
}
